# grimwall

./: .gitignore  .gitignore.swp  CMakeLists.txt  Grimwall.opensdf  Grimwall.sdf  Grimwall.sln  README.md  main.cpp  tiled2fife.py
CMake/Modules/: FindFifeChan.cmake  FindGoogleMock.cmake  FindGoogleTest.cmake
Grimwall/: ATower.h  ATroup.h  GUI.h  Game.cpp  Grimwall.vcxproj  Grimwall.vcxproj.filters  IAbility.h  ICallback.h  IMovable.h  IUIComponent.h  IVisitable.h  KeyboardMapper.h  KeypressCallback.h  LevelBuilder.cpp  MouseCallback.h  MouseMapper.h  UnitFactory.cpp
Tiled maps/: level1.tmx
assets/fonts/: Thumbs.db
assets/maps/: level1.xml  level1_complete.xml  level1_conv.xml  level1_remake_conv.xml  level2.xml  level3.xml  shrine.xml  tutorial_conv.xml
assets/objects/: buildings.xml  ground1.xml  ground2.xml  items1.xml  items2.xml  nature.xml
assets/objects/agents/bee/: object.xml
assets/objects/agents/beekeeper/: object.xml
assets/objects/agents/boy/: object.xml
assets/objects/agents/chemist/: object.xml
assets/objects/agents/girl/: object.xml
assets/objects/agents/hippie_priest/: object.xml
assets/objects/agents/merchant/: object.xml
assets/objects/agents/tourist_female1/: object.xml
assets/objects/agents/tourist_female2/: object.xml
assets/objects/agents/tourist_male1/: object.xml
assets/objects/agents/tourist_male2/: object.xml
assets/objects/crates/dynamites_lid/: object.xml
assets/objects/crates/empty_lid/: object.xml
assets/objects/effects/: clickground.xml
assets/objects/heroes/Dralas/: object.xml
assets/objects/heroes/Horwen/: object.xml
assets/objects/heroes/Zarrku/: object.xml
assets/objects/projectiles/: bolt.xml  icebolt.xml  rock.xml
assets/objects/tiles/: Thumbs.db  blocker.xml  empty.xml  gravell.xml  lava.xml  sand.xml  snow.xml  water.xml  waterL.xml  waterM.xml  waterR.xml
assets/objects/towers/: Thumbs.db  tower.xml  tree.xml
assets/objects/troups/Catapult/: Catapult.xml
assets/objects/troups/Crossbowman/: Crossbowman.xml
assets/objects/troups/Horseman/: Horseman.xml
assets/objects/troups/Longbowman/: Longbowman.xml
assets/objects/troups/Swordsman/: Swordsman.xml
assets/tiled/: level1.js  level1.json  level1.tmx  level1_complete.tmx  level1_remake.tmx  level2.tmx  level2_complete.tmx  level3.tmx  level3_complete.tmx  tutorial.tmx
source/Gui/: GUI.h
source/Input/: ICallback.h  KeyboardMapper.h  KeypressCallback.cpp  MouseCallback.cpp  MouseCallback.h  MouseMapper.h
source/game/: EngineFacade.cpp  EngineFacade.h  Game.cpp  Game.h  IAbility.h  IMovable.h  IVisitable.h  LevelBuilder.h  UnitFactory.h
src/: Main.cpp  main.cpp
src/Domain/: AHero.cpp  AHero.h  AUnit.cpp  AUnit.h  EngineFacade.cpp  EngineFacade.h  Game.cpp  Game.h  IAbility.h  IEngineFacade.cpp  IEngineFacade.h  IGame.h  ILevel.cpp  ILevel.h  IMovable.h  IVisitable.h  IVisitor.h  LevelBuilder.cpp  LevelBuilder.h  TowerFactory.cpp  TowerFactory.h  TowerManager.cpp  TowerManager.h  UnitFactory.cpp  UnitFactory.h
src/Domain/FIFE/: FIFECamera.cpp  FIFECamera.h  FIFEChan.cpp  FIFEChan.h  FIFEChanFacade.cpp  FIFEChanFacade.h  FIFEFacade.cpp  FIFEFacade.h  FIFEKeyListener.cpp  FIFEKeyListener.h  FIFEMouseListener.cpp  FIFEMouseListener.h
src/Domain/Heroes/: AHero.cpp  AHero.h  IAbility.h
src/Domain/Levels/: Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h
src/Domain/SaveGame/: ISaveGameManager.h  ISaveGameStrategy.h  SaveGame.cpp  SaveGame.h  SaveGameManager.cpp  SaveGameManager.h  TextSaveGameStrategy.cpp  TextSaveGameStrategy.h
src/Domain/Towers/: ArmouredTower.cpp  ArmouredTower.h  RangedTower.cpp  RangedTower.h  Tower.cpp  Tower.h
src/Domain/Units/: AUnit.cpp  AUnit.h  IUnit.cpp  IUnit.h  UnitManager.cpp  UnitManager.h  UnitManager.hpp
src/GUI/: AGUIManager.cpp  AGUIManager.h  GUI.cpp  GUI.h  GUIRepo.cpp  GUIRepo.h  HeroVisitor.cpp  HeroVisitor.h  IUIComponent.h  MainMenu.cpp  MainMenu.h
src/GUI/Screen/: ScreenCredits.cpp  ScreenCredits.h  ScreenGame.cpp  ScreenGame.h  ScreenGameOver.cpp  ScreenGameOver.h  ScreenHelp.cpp  ScreenHelp.h  ScreenHighscores.cpp  ScreenHighscores.h  ScreenLoad.cpp  ScreenLoad.h  ScreenLoading.cpp  ScreenLoading.h  ScreenMainMenu.cpp  ScreenMainMenu.h  ScreenOptions.cpp  ScreenOptions.h  ScreenPause.cpp  ScreenPause.h  ScreenSelectHero.cpp  ScreenSelectHero.h  ScreenSelectLevel.cpp  ScreenSelectLevel.h  ScreenWon.cpp  ScreenWon.h
src/GUI/Widget/: AGUIWidget.cpp  AGUIWidget.h  GUITextAlignment.h  GUIWidgetButton.cpp  GUIWidgetButton.h  GUIWidgetContainer.cpp  GUIWidgetContainer.h  GUIWidgetImage.cpp  GUIWidgetImage.h  GUIWidgetImageButton.cpp  GUIWidgetImageButton.h  GUIWidgetLabel.cpp  GUIWidgetLabel.h  GUIWidgetRadio.cpp  GUIWidgetRadio.h  GuiWidgetButton.cpp  GuiWidgetButton.h
src/Game/: AHero.cpp  AHero.h  ATower.cpp  AUnit.h  EngineFacade.cpp
src/Input/: ICallback.h  IMouseEvent.h  KeyboardMapper.cpp  KeyboardMapper.h  KeypressCallback.cpp  KeypressCallback.h  MouseCallback.cpp  MouseCallback.h  MouseMapper.cpp  MouseMapper.h
src/Input/Callbacks/: AttackCallback.cpp  AttackCallback.h  CatapultSpawnCallback.cpp  CatapultSpawnCallback.h  CrossbowmanSpawnCallback.cpp  CrossbowmanSpawnCallback.h  GameSpeedCallback.cpp  GameSpeedCallback.h  HorsemanSpawnCallback.cpp  HorsemanSpawnCallback.h  InfHealthCallback.cpp  InfHealthCallback.h  InfManaCallback.cpp  InfManaCallback.h  InvisibleCallback.cpp  InvisibleCallback.h  LongbowmanSpawnCallback.cpp  LongbowmanSpawnCallback.h  MoveCallback.cpp  MoveCallback.h  MoveCameraCallback.cpp  MoveCameraCallback.h  MoveTroupsCallback.cpp  MoveTroupsCallback.h  QuitCallback.cpp  QuitCallback.h  SwordsmanSpawnCallback.cpp  SwordsmanSpawnCallback.h  TroupMoveCallback.cpp  TroupMoveCallback.h  TroupSpawnCallback.cpp  TroupSpawnCallback.h  UseAbilityCallback.cpp  UseAbilityCallback.h  ZoomCameraCallback.cpp  ZoomCameraCallback.h  ZoomInCallback.cpp  ZoomInCallback.h
test/src/: Main_TestAll.cpp
test/src/Callbacks/: ZoomCameraCallbackTest.cpp
test/src/Heroes/: ZarrkuTest.cpp
test/src/Mocks/: IEngineFacadeMock.h  IGameMock.h
(+132 files in other folders)
